[gd_scene load_steps=5 format=3 uid="uid://bjalfdycvpln1"]

[ext_resource type="Script" path="res://Enemies/enemy.gd" id="1_wo6jg"]
[ext_resource type="PackedScene" uid="uid://cb153xbsva0ld" path="res://enemy_health.tscn" id="2_afdk2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7rcut"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gqn0l"]
size = Vector2(138, 119)

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_wo6jg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_7rcut")

[node name="Polygon2D" type="Polygon2D" parent="."]
scale = Vector2(3, 3)
color = Color(1, 0.411765, 0.411765, 1)
polygon = PackedVector2Array(0, -10, 7, -7, 10, 0, 7, 7, 0, 10, -7, 7, -10, 0, -7, -7)

[node name="Attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
shape = SubResource("RectangleShape2D_gqn0l")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="HealthBar" parent="." instance=ExtResource("2_afdk2")]

[connection signal="body_entered" from="Attack" to="." method="_on_attack_body_entered"]
[connection signal="body_exited" from="Attack" to="." method="_on_attack_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
